--- a/apps/dashboard/lib/dashboard_web/components/layouts/app.html.heex
+++ b/apps/dashboard/lib/dashboard_web/components/layouts/app.html.heex
@@ -18,7 +18,7 @@
       <a href="/chuck_norris_api" class="hover:text-zinc-700">
         Chuck Norris
       </a>
-      <a href="/tokens"
+      <a href="/calculate_compound_interests"
         class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
       >
         Interes Compuesto <span aria-hidden="true">&rarr;</span>
