feat: add mix setup in root umbrella app

--- a/apps/dashboard/lib/dashboard_web/controllers/weather_html/index.html.heex
+++ b/apps/dashboard/lib/dashboard_web/controllers/weather_html/index.html.heex
@@ -1,6 +1,6 @@
 <.header>
   Clima 
-  <:subtitle>Escribe el nombre de la ciuda, estado o pais para obtener las condiciones climaticas.</:subtitle>
+  <:subtitle>Escribe el nombre de la ciudad, estado o pais para obtener las condiciones climaticas.</:subtitle>
 </.header>
 
 <%= if is_binary(@errors) and String.length(@errors) > 0 do %>
